fix: padronização do .toList()